[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scipts/MENU.gd" type="Script" id=1]
[ext_resource path="res://Assets/tile000.png" type="Texture" id=2]
[ext_resource path="res://Assets/tile001.png" type="Texture" id=3]
[ext_resource path="res://Assets/tile002.png" type="Texture" id=4]
[ext_resource path="res://Assets/tile003.png" type="Texture" id=5]
[ext_resource path="res://Assets/joystix monospace.ttf" type="DynamicFontData" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Assets/joystix monospace.ttf"

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 6 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Cascata" type="AnimatedSprite" parent="."]
position = Vector2( 319.79, 162.106 )
scale = Vector2( 1.29071, 1.29071 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="Versao" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -14.0
text = "V 1.0"
valign = 1

[node name="TEXT" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -150.0

[node name="Titulo" type="CenterContainer" parent="TEXT"]
margin_right = 640.0
margin_bottom = 210.0

[node name="HBoxContainer" type="HBoxContainer" parent="TEXT/Titulo"]
margin_left = 190.0
margin_top = 78.0
margin_right = 449.0
margin_bottom = 132.0

[node name="Label" type="Label" parent="TEXT/Titulo/HBoxContainer"]
margin_right = 259.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0823529, 0.815686, 0.870588, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Cascata"

[node name="MENU" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 200.0
margin_right = -400.0

[node name="Menu Lateral" type="VBoxContainer" parent="MENU"]
margin_right = 240.0
margin_bottom = 160.0

[node name="VBoxContainer" type="VBoxContainer" parent="MENU/Menu Lateral"]
margin_right = 240.0
margin_bottom = 146.0
alignment = 2

[node name="Button" type="Button" parent="MENU/Menu Lateral/VBoxContainer"]
margin_right = 240.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.0588235, 0.819608, 0.945098, 1 )
text = "Novo Jogo"
flat = true

[node name="Button2" type="Button" parent="MENU/Menu Lateral/VBoxContainer"]
margin_top = 30.0
margin_right = 240.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.0588235, 0.819608, 0.945098, 1 )
text = "Continuar"
flat = true

[node name="Button3" type="Button" parent="MENU/Menu Lateral/VBoxContainer"]
margin_top = 60.0
margin_right = 240.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.0588235, 0.819608, 0.945098, 1 )
text = "Opções"
flat = true

[node name="Button4" type="Button" parent="MENU/Menu Lateral/VBoxContainer"]
margin_top = 90.0
margin_right = 240.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.0588235, 0.819608, 0.945098, 1 )
text = "Créditos"
flat = true

[node name="Button5" type="Button" parent="MENU/Menu Lateral/VBoxContainer"]
margin_top = 120.0
margin_right = 240.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.0588235, 0.819608, 0.945098, 1 )
text = "Sair"
flat = true
[connection signal="pressed" from="MENU/Menu Lateral/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MENU/Menu Lateral/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="MENU/Menu Lateral/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="MENU/Menu Lateral/VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="MENU/Menu Lateral/VBoxContainer/Button5" to="." method="_on_Button5_pressed"]
